--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "async_wake_ios"]
 	path = async_wake_ios
-	url = git@github.com:xerub/async_wake_ios.git
+	url = https://github.com/xerub/async_wake_ios.git
